--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       
         <input type="text" id="lname" name="lname" size="15" value="word">
         <input type="submit" value="Search">
-        <input type="button" onclick="https://project02-crudfrontpage.netlify.app/add.html" value="Add">
+        <input type="button" onclick="location.href='https://project02-crudfrontpage.netlify.app/add.html' " value="Add">
         
         <table class="table table-striped table-sm">
           <thead>
