--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
       
         <input type="text" id="lname" name="lname" size="15" value="word">
         <input type="submit" value="Search">
-        <input type="button" onclick="location.href='https://project02-crudfrontpage.netlify.app/add.html' " value="Add">
-        
+        <button onclick="location.href = 'https://project02-crudfrontpage.netlify.app/add.html';">Add</button>
         <table class="table table-striped table-sm">
           <thead>
             <tr>
