--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <table class="table table-striped table-sm">
 
-          <thead align="center">
+          <thead align="left">
             <t>
               <th>#</th>
               <th>Level</th>
