--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <input type="submit" value="Search">
         <button class="box" onclick="location.href = '/add.html';">Add</button>
 
-        <table class="table table-striped table-sm">
+        <table class="table table-striped table-sm" align="left">
 
-          <thead align="left">
+          <thead align="center">
             <t>
               <th>#</th>
               <th>Level</th>
@@ -330,7 +330,6 @@
     </main>
   </div>
 </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/docs/4.6/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
