--- a/add.html
+++ b/add.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Add Page</title>
   </head>
   <body>
+    <li>
+      <label for="">취미</label>
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="취미를 입력해주세요" autocomplete="off" >
+      <p></p>
+    </li>
+    <li>
+      <label for="">연락처</label>
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="연락처를 입력해주세요" autocomplete="off" >
+      <p></p>
+    </li>
+    <li>
+      <label for="">전공</label>
+      <select style="color:black;background-color:white;" class="check" name="test3">
+      <option value="선택">전공을 선택해주세요.</option>
+      </select>
+        <p></p>
+    </li>
     
     <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
   </body>
