--- a/add.html
+++ b/add.html
@@ -6,13 +6,18 @@
   </head>
   <body>
     <li>
-      <label for="">취미</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="취미를 입력해주세요" autocomplete="off" >
+      <label for="">level</label>
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="Input level" autocomplete="off" >
       <p></p>
     </li>
     <li>
-      <label for="">연락처</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="연락처를 입력해주세요" autocomplete="off" >
+      <label for="">Word</label>
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="Input word" autocomplete="off" >
+      <p></p>
+    </li>
+    <li>
+      <label for="">Meaning</label>
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="Input Meaning" autocomplete="off" >
       <p></p>
     </li>
     <li>
