--- a/add.html
+++ b/add.html
@@ -23,15 +23,15 @@
     
     <button id="Button">Add</button>
 
-    <script>
+
         // Get a reference to the button element by its ID
         var button = document.getElementById("myButton");
 
         // Add a click event listener to the button
-        button.addEventListener("click", function() {
-            alert("Button clicked!");
-        });
-    </script>
+        <script>
+         document.getElementById("button").onclick = function () {
+          alert("Hello World");};
+        </script>
     
     <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
   </body>
