--- a/add.html
+++ b/add.html
@@ -22,17 +22,8 @@
     </li>
     
     <button id="Button">Add</button>
+    <button onclick="javascript:alert('Hello World')">버튼</button>
 
-
-        // Get a reference to the button element by its ID
-        var button = document.getElementById("myButton");
-
-        // Add a click event listener to the button
-        <script>
-         document.getElementById("button").onclick = function () {
-          alert("Hello World");};
-        </script>
-    
     <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
   </body>
 </html>
