--- a/add.html
+++ b/add.html
@@ -20,9 +20,8 @@
       <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="meaning" autocomplete="off" >
       <p></p>
     </li>
-    
-    <button id="Button">Add</button>
-    <button onclick="javascript:alert('Hello World')">버튼</button>
+
+    <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
 
     <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
   </body>
