--- a/add.html
+++ b/add.html
@@ -17,10 +17,14 @@
     </li>
     <li>
       <label for="">Meaning</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="meaning" autocomplete="off" >
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" >
       <p></p>
     </li>
-
+    <li>
+      <label for="">Date</label>
+      <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" >
+      <p></p>
+    </li>
     <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
 
     <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
