--- a/add.html
+++ b/add.html
@@ -7,17 +7,17 @@
   <body>
     <li>
       <label for="">level</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level" autocomplete="off" >
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" align="center">
       <p></p>
     </li>
     <li>
       <label for="">Word</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" >
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" align="center">
       <p></p>
     </li>
     <li>
       <label for="">Meaning</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" >
+      <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" align="center">
       <p></p>
     </li>
     <li>
