--- a/add.html
+++ b/add.html
@@ -41,28 +41,41 @@
   </head>
 
   <body>
-    <li>
-      <label for="">level</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off">
-      <p></p>
-    </li>
-    <li>
-      <label for="">Word</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off">
-      <p></p>
-    </li>
-    <li>
-      <label for="">Meaning</label>
-      <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off">
-      <p></p>
-    </li>
-    <li>
-      <label for="">Date</label>
-      <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" >
-      <p></p>
-    </li>
-    <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
+    <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Home</a>
+      <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="#">Sign out</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="table-responsive" align="right" >
+      <li>
+        <label for="">level</label>
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off">
+        <p></p>
+      </li>
+      <li>
+        <label for="">Word</label>
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off">
+        <p></p>
+      </li>
+      <li>
+        <label for="">Meaning</label>
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off">
+        <p></p>
+      </li>
+      <li>
+        <label for="">Date</label>
+        <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" >
+        <p></p>
+      </li>
+      <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
 
-    <button onclick="window.location.href = 'index.html';">메인페이지 돌아가기</button>
+      <button onclick="location.href = 'index.html';">메인페이지 돌아가기</button>
+  </div>
   </body>
 </html>
