--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               
         <input type="text" id="lname" name="lname" size="15" value="word">
         <input type="submit" value="Search">
-        <button class="box" onclick="location.href = '/add.html';">Add</button>
+        <button class="box" onclick="location.href = 'add.html';">Add</button>
 
         <table class="table table-striped table-sm" align="left">
 
