--- a/add.html
+++ b/add.html
@@ -52,7 +52,7 @@
         </li>
       </ul>
     </nav>
-    <div class="table-responsive" align="right" >
+    <div class="table-responsive" align="center" >
       <li>
         <label for="">level</label>
         <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off">
