--- a/add.html
+++ b/add.html
@@ -42,6 +42,7 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+      <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" onclick="location.href = 'index.html';">Home</button>
       <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Home</a>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,7 +57,7 @@
       <p>
 
 
-        
+
       </p>
       <li>
         <label for="">level</label>
