--- a/add.html
+++ b/add.html
@@ -60,22 +60,22 @@
       </p>
       <li>
         <label for="">level</label>
-        <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" align="left">
+        <input style="color:white;background-color:navy;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" >
         <p></p>
       </li>
       <li>
         <label for="">Word</label>
-        <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" align="left">
+        <input style="color:white;background-color:navy;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" >
         <p></p>
       </li>
       <li>
         <label for="">Meaning</label>
-        <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" align="left">
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" >
         <p></p>
       </li>
       <li>
         <label for="">Date</label>
-        <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" align="left">
+        <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" >
         <p></p>
       </li>
       <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
