--- a/add.html
+++ b/add.html
@@ -42,7 +42,7 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:black;background-color:white;" onclick="location.href = 'index.html';">Home</button>
+      <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:white;background-color:black;" onclick="location.href = 'index.html';">Home</button>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -60,12 +60,12 @@
       </p>
       <li>
         <label for="">level</label>
-        <input style="color:white;background-color:navy;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" >
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" >
         <p></p>
       </li>
       <li>
         <label for="">Word</label>
-        <input style="color:white;background-color:navy;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" >
+        <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" >
         <p></p>
       </li>
       <li>
