--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <th>Word</th>
               <th>Meaning</th>
               <th>Date</th>
+              <th>Menu</th>
             </th<>
           </thead>
           <tbody>
@@ -101,6 +102,7 @@
               <td>superintendent</td>
               <td>관리자, 감독관</td>
               <td>2023-10-06</td>
+              <td>Edit Delete</td>
             </tr>
             <tr>
               <td>2</td>
@@ -108,6 +110,7 @@
               <td>electric</td>
               <td>전기의, 전기를 생산하는</td>
               <td>2023-10-06</td>
+              <td>Edit Delete</td>
             </tr>
             <tr>
               <td>3</td>
