--- a/add.html
+++ b/add.html
@@ -58,6 +58,7 @@
 
 
       </p>
+      <h4>최근 추가한 항목</h4>
       <li>
         <label for="">level</label>
         <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" >
