--- a/add.html
+++ b/add.html
@@ -42,7 +42,7 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:white;background-color:black;" onclick="location.href = 'index.html';">Home</button>
+      <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:white;background-color:#353a3f;" onclick="location.href = 'index.html';">Home</button>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,35 +53,106 @@
       </ul>
     </nav>
     <div class="table-responsive" align="center" >
-      <p>
+      <p>&nbsp;</p>
+      <h4>최근 저장된 항목 (10)</h4>
+      <p>&nbsp;</p><p>&nbsp;</p>
+      <table class="table table-striped table-sm" align="left">
+        <thead align="center">
+          <t>
+            <th>#</th>
+            <th>Level</th>
+            <th>Word</th>
+            <th>Meaning</th>
+            <th>Date</th>
+          </th<>
+        </thead>
+        <tbody align="center">
+          <tr>
+            <tr>
+              <td>24</td>
+              <td>*</td>
+              <td>thoughtlessly</td>
+              <td>생각 없이</td>
+              <td>2023-10-09</td>
+            </tr>
+            <tr>
+              <td>25</td>
+              <td>*</td>
+              <td>discard</td>
+              <td>버리다</td>
+              <td>2023-10-09</td>
+            </tr>
+            <td>26</td>
+            <td>*</td>
+            <td>unfortunate</td>
+            <td>불운한</td>
+            <td>2023-10-10</td>
+          </tr>
+          <tr>
+            <td>27</td>
+            <td>*</td>
+            <td>branch</td>
+            <td>나뭇가지</td>
+            <td>2023-10-10</td>
+          </tr>
+          <tr>
+            <td>28</td>
+            <td>*</td>
+            <td>trim</td>
+            <td>다듬다</td>
+            <td>2023-10-10</td>
+          </tr>
+          <tr>
+            <td>29</td>
+            <td>***</td>
+            <td>crouch</td>
+            <td>쪼그리고 앉다</td>
+            <td>2023-10-10</td>
+          </tr>
+          <tr>
+            <td>30</td>
+            <td>**</td>
+            <td>proclaim</td>
+            <td>공언하다, 선포하다</td>
+            <td>2023-10-10</td>
+          </tr>
+          <tr>
+            <td>31</td>
+            <td>*</td>
+            <td>scatter</td>
+            <td>흩뿌리다, 살포하다</td>
+            <td>2023-10-10</td>
+          </tr><tr>
+            <td>32</td>
+            <td>*</td>
+            <td>proceed</td>
+            <td>진행하다[되다]</td>
+            <td>2023-10-10</td>
+          </tr><tr>
+            <td>33</td>
+            <td>*</td>
+            <td>reputation</td>
+            <td>평판, 명성</td>
+            <td>2023-10-10</td>
+          </tr>
+        </tbody>
+      </table>
+      <p>&nbsp;</p> <p>&nbsp;</p>
 
-
-
-      </p>
-      <h4>최근 추가한 항목</h4>
-      <li>
         <label for="">level</label>
         <input style="color:black;background-color:white;" type="text"  class="check" name="test1" value="" placeholder="level(1~3)" autocomplete="off" >
-        <p></p>
-      </li>
-      <li>
+        &nbsp;
         <label for="">Word</label>
         <input style="color:black;background-color:white;" type="text"  class="check" name="test2" value="" placeholder="word" autocomplete="off" >
-        <p></p>
-      </li>
-      <li>
+        &nbsp;
         <label for="">Meaning</label>
         <input style="color:black;background-color:white;" type="text"  class="check" name="test3" value="" placeholder="meaning" autocomplete="off" >
-        <p></p>
-      </li>
-      <li>
+        &nbsp;
         <label for="">Date</label>
         <input style="color:black;background-color:white;" type="date"  class="check" name="test4" value="" placeholder="date" autocomplete="off" >
-        <p></p>
-      </li>
+        &nbsp;
       <button onclick="javascript:alert('게시물이 추가됩니다.')"> Add </button>
 
-      <button onclick="location.href = 'index.html';">메인페이지 돌아가기</button>
   </div>
   </body>
 </html>
