--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
     
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Home</a>
+  <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:white;background-color:#353a3f;" onclick="location.href = 'index.html';">Home</button>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -85,7 +85,7 @@
 
         <table class="table table-striped table-sm" align="left">
 
-          <thead align="center">
+          <thead align="left">
             <t>
               <th>#</th>
               <th>Level</th>
@@ -102,13 +102,22 @@
               <td>superintendent</td>
               <td>관리자, 감독관</td>
               <td>2023-10-06</td>
-            </tr>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             <tr>
               <td>2</td>
               <td>*</td>
               <td>electric</td>
               <td>전기의, 전기를 생산하는</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>3</td>
@@ -116,6 +125,11 @@
               <td>equipment</td>
               <td>장비, 용품</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>4</td>
@@ -123,6 +137,11 @@
               <td>pole</td>
               <td>기둥, 장대</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>5</td>
@@ -130,6 +149,11 @@
               <td>formerly</td>
               <td>이전에, 예전에</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>6</td>
@@ -137,6 +161,11 @@
               <td>transfer</td>
               <td>옮기다, 이동하다</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>7</td>
@@ -144,6 +173,11 @@
               <td>executive</td>
               <td>경영 간부, 임원</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>8</td>
@@ -151,6 +185,11 @@
               <td>assure</td>
               <td>안심시키다, 확신시키다</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>9</td>
@@ -158,6 +197,11 @@
               <td>embarrassment</td>
               <td>당황, 난처함</td>
               <td>2023-10-06</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>10</td>
@@ -165,6 +209,11 @@
               <td>publicity</td>
               <td>명성, 평판, 널리 알려짐, 공표</td>
               <td>2023-10-07</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>11</td>
@@ -172,6 +221,11 @@
               <td>subordinate</td>
               <td>부하의, 하급자의</td>
               <td>2023-10-07</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>12</td>
@@ -179,6 +233,11 @@
               <td>utility</td>
               <td>공익사업(체), 유용성</td>
               <td>2023-10-07</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>13</td>
@@ -186,6 +245,11 @@
               <td>lone</td>
               <td>혼자인, 단독의, 외딴</td>
               <td>2023-10-07</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>14</td>
@@ -193,6 +257,11 @@
               <td>glance</td>
               <td>흘긋 보다, 대강 훑어보다</td>
               <td>2023-10-07</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>15</td>
@@ -200,6 +269,11 @@
               <td>conscious</td>
               <td>의식하는, 자각하는</td>
               <td>2023-10-08</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
              <tr>
               <td>16</td>
@@ -207,6 +281,11 @@
               <td>overkill</td>
               <td>지나침, 과잉</td>
               <td>2023-10-08</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
              <tr>
               <td>17</td>
@@ -214,6 +293,11 @@
               <td>stroll</td>
               <td>거닐다, 산책하다</td>
               <td>2023-10-08</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
              <tr>
               <td>18</td>
@@ -221,6 +305,11 @@
               <td>stock</td>
               <td>주식, 재고</td>
               <td>2023-10-08</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
              <tr>
               <td>19</td>
@@ -228,6 +317,11 @@
               <td>eye-opener</td>
               <td>눈이 휘둥그레질 만한 사건, 놀라운 경험</td>
               <td>2023-10-08</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
              <tr>
               <td>20</td>
@@ -235,6 +329,11 @@
               <td>graceful</td>
               <td>우아한</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>21</td>
@@ -242,6 +341,11 @@
               <td>seagull</td>
               <td>갈매기</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>22</td>
@@ -249,6 +353,11 @@
               <td>tightly</td>
               <td>단단히</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>23</td>
@@ -256,6 +365,11 @@
               <td>webbed</td>
               <td>물갈퀴가 있는</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>24</td>
@@ -263,6 +377,11 @@
               <td>thoughtlessly</td>
               <td>생각 없이</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>25</td>
@@ -270,6 +389,11 @@
               <td>discard</td>
               <td>버리다</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>26</td>
@@ -277,6 +401,11 @@
               <td>unfortunate</td>
               <td>불운한</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>27</td>
@@ -284,6 +413,11 @@
               <td>branch</td>
               <td>나뭇가지</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>28</td>
@@ -291,6 +425,11 @@
               <td>trim</td>
               <td>다듬다</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>29</td>
@@ -298,6 +437,11 @@
               <td>crouch</td>
               <td>쪼그리고 앉다</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>30</td>
@@ -305,6 +449,11 @@
               <td>proclaim</td>
               <td>공언하다, 선포하다</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>31</td>
@@ -312,18 +461,33 @@
               <td>scatter</td>
               <td>흩뿌리다, 살포하다</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr><tr>
               <td>32</td>
               <td>*</td>
               <td>proceed</td>
               <td>진행하다[되다]</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr><tr>
               <td>33</td>
               <td>*</td>
               <td>reputation</td>
               <td>평판, 명성</td>
               <td>2023-10-10</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
           </tbody>
         </table>
