--- a/add.html
+++ b/add.html
@@ -34,6 +34,20 @@
 
     </style>
 
+    <script>
+      function edit_confirm(){
+      if(confirm("게시물을 수정할까요?")){
+        alert("정상적으로 수정되었습니다.");}
+      else{
+        alert("취소되었습니다.");}
+      }
+      function delete_confirm(){
+      if(confirm("게시물을 삭제할까요?")){
+        alert("정상적으로 삭제되었습니다.");}
+      else{
+        alert("취소되었습니다.");}
+      }
+    </script>
     
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
@@ -54,7 +68,7 @@
     </nav>
     <div class="table-responsive" align="center" >
       <p>&nbsp;</p>
-      <h4>최근 저장된 항목 (10)</h4>
+      <h4>최근 저장된 10개의 항목</h4>
       <p>&nbsp;</p><p>&nbsp;</p>
       <table class="table table-striped table-sm" align="left">
         <thead align="center">
@@ -64,6 +78,7 @@
             <th>Word</th>
             <th>Meaning</th>
             <th>Date</th>
+            <th>Menu</th>
           </th<>
         </thead>
         <tbody align="center">
@@ -74,6 +89,11 @@
               <td>thoughtlessly</td>
               <td>생각 없이</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+                &nbsp;
+                <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <tr>
               <td>25</td>
@@ -81,12 +101,22 @@
               <td>discard</td>
               <td>버리다</td>
               <td>2023-10-09</td>
+              <td> 
+                <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+                &nbsp;
+                <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+              </td>
             </tr>
             <td>26</td>
             <td>*</td>
             <td>unfortunate</td>
             <td>불운한</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
           <tr>
             <td>27</td>
@@ -94,6 +124,11 @@
             <td>branch</td>
             <td>나뭇가지</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
           <tr>
             <td>28</td>
@@ -101,6 +136,11 @@
             <td>trim</td>
             <td>다듬다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
           <tr>
             <td>29</td>
@@ -108,6 +148,11 @@
             <td>crouch</td>
             <td>쪼그리고 앉다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
           <tr>
             <td>30</td>
@@ -115,6 +160,11 @@
             <td>proclaim</td>
             <td>공언하다, 선포하다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
           <tr>
             <td>31</td>
@@ -122,18 +172,33 @@
             <td>scatter</td>
             <td>흩뿌리다, 살포하다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr><tr>
             <td>32</td>
             <td>*</td>
             <td>proceed</td>
             <td>진행하다[되다]</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr><tr>
             <td>33</td>
             <td>*</td>
             <td>reputation</td>
             <td>평판, 명성</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button>  
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button> 
+            </td>
           </tr>
         </tbody>
       </table>
