--- a/edit.html
+++ b/edit.html
@@ -68,7 +68,7 @@
     </nav>
     <div class="table-responsive" align="center" >
       <p>&nbsp;</p>
-      <h4>최근 저장된 항목 (10)</h4>
+      <h4>최근 저장된 10개의 항목</h4>
       <p>&nbsp;</p><p>&nbsp;</p>
       <table class="table table-striped table-sm" align="left">
         <thead align="center">
