--- a/view.html
+++ b/view.html
@@ -73,6 +73,7 @@
             <th>Word</th>
             <th>Meaning</th>
             <th>Date</th>
+            <th>Menu</th>
           </th<>
         </thead>
         <tbody align="center">
@@ -81,198 +82,363 @@
             <td>electric</td>
             <td>전기의, 전기를 생산하는</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>pole</td>
             <td>기둥, 장대</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>formerly</td>
             <td>이전에, 예전에</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>transfer</td>
             <td>옮기다, 이동하다</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>assure</td>
             <td>안심시키다, 확신시키다</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>lone</td>
             <td>혼자인, 단독의, 외딴</td>
             <td>2023-10-07</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>glance</td>
             <td>흘긋 보다, 대강 훑어보다</td>
             <td>2023-10-07</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>stock</td>
             <td>주식, 재고</td>
             <td>2023-10-08</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>graceful</td>
             <td>우아한</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>seagull</td>
             <td>갈매기</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>tightly</td>
             <td>단단히</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>thoughtlessly</td>
             <td>생각 없이</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>discard</td>
             <td>버리다</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>unfortunate</td>
             <td>불운한</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>branch</td>
             <td>나뭇가지</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>trim</td>
             <td>다듬다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>scatter</td>
             <td>흩뿌리다, 살포하다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>proceed</td>
             <td>진행하다[되다]</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>*</td>
             <td>reputation</td>
             <td>평판, 명성</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>equipment</td>
             <td>장비, 용품</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>executive</td>
             <td>경영 간부, 임원</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>embarrassment</td>
             <td>당황, 난처함</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>publicity</td>
             <td>명성, 평판, 널리 알려짐, 공표</td>
             <td>2023-10-07</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>utility</td>
             <td>공익사업(체), 유용성</td>
             <td>2023-10-07</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>conscious</td>
             <td>의식하는, 자각하는</td>
             <td>2023-10-08</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>overkill</td>
             <td>지나침, 과잉</td>
             <td>2023-10-08</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>stroll</td>
             <td>거닐다, 산책하다</td>
             <td>2023-10-08</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>eye-opener</td>
             <td>눈이 휘둥그레질 만한 사건, 놀라운 경험</td>
             <td>2023-10-08</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>webbed</td>
             <td>물갈퀴가 있는</td>
             <td>2023-10-09</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>**</td>
             <td>proclaim</td>
             <td>공언하다, 선포하다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>***</td>
             <td>superintendent</td>
             <td>관리자, 감독관</td>
             <td>2023-10-06</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>***</td>
             <td>subordinate</td>
             <td>부하의, 하급자의</td>
             <td>2023-10-07</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
           <tr>
             <td>***</td>
             <td>crouch</td>
             <td>쪼그리고 앉다</td>
             <td>2023-10-10</td>
+            <td> 
+              <Button onclick="location.href = 'edit.html';"> <i class="bi bi-pencil"></i> </Button> 
+              &nbsp;
+              <Button onclick="delete_confirm()"> <i class="bi bi-trash"></i> </Button>  
+            </td>
           </tr>
         </tbody>
       </table>
