--- a/view.html
+++ b/view.html
@@ -11,7 +11,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Master Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/dashboard/">
 
