--- a/edit.html
+++ b/edit.html
@@ -59,7 +59,7 @@
         // Level validation (1~3)
         var levelValue = levelInput.value.trim();
         
-        if (levelValue !== "" && (levelValue < 1 || levelValue > 3)) {
+        if (levelValue == "" && (levelValue < 1 || levelValue > 3)) {
             alert("Level should be between 1 and 3.");
             return false;}
 
