--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </button>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a align="right" class="nav-link" href="#">Sign out</a>
     </li>
   </ul>
 </nav>
