--- a/add.html
+++ b/add.html
@@ -95,12 +95,10 @@
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
       <button class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="color:white;background-color:#353a3f;" onclick="location.href = 'index.html';">Home</button>
-      <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
+          <a align="right" class="nav-link" href="#">Sign out</a>
         </li>
       </ul>
     </nav>
