--- a/add.html
+++ b/add.html
@@ -105,6 +105,7 @@
     <div class="table-responsive" align="center" >
       <p>&nbsp;</p>
       <h4>최근 저장된 10개의 항목</h4>
+      <p>현재 페이지는 단어를 추가하는 기능의 페이지입니다.</p>
       <p>&nbsp;</p><p>&nbsp;</p>
       <table class="table table-striped table-sm" align="left">
         <thead align="center">
