--- a/edit.html
+++ b/edit.html
@@ -101,6 +101,7 @@
     <div class="table-responsive" align="center" >
       <p>&nbsp;</p>
       <h4>최근 저장된 10개의 항목</h4>
+      <p>현재 페이지는 단어를 수정하는 기능의 페이지입니다.</p>
       <p>&nbsp;</p><p>&nbsp;</p>
       <table class="table table-striped table-sm" align="left">
         <thead align="center">
@@ -249,7 +250,7 @@
         <label for="test4">Date</label>
         <input style="color:black;background-color:white;" type="date" class="check" name="test4" id="test4" value="" placeholder="date" autocomplete="off">
         <p>&nbsp;</p>
-        <button type="submit">Add</button>
+        <button type="submit">Edit</button>
     </form>
   </div>
   </body>
